# pycasts

./: .gitignore  pyproject.toml
content_aggregator/: settings.py
podcasts/: admin.py  models.py
podcasts/migrations/: 0001_initial.py
