[project]
name = ""
version = ""
description = ""
authors = [
    {name = "eko", email = "fengxiaohui9004@outlook.com"},
]
dependencies = [
    "django>=4.2.3",
    "django-apscheduler>=0.6.2",
    "feedparser>=6.0.10",
    "python-dateutil>=2.8.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

